--- a/back/.sequelizerc
+++ b/back/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
 module.exports = {
-    'config': path.resolve('back/src/config', 'config.js'),
-    'models-path': path.resolve('back/src/models'),
-    'seeders-path': path.resolve('back/src/seeders'),
-    'migrations-path': path.resolve('back/src/migrations')
+    'config': path.resolve('src/config', 'config.js'),
+    'models-path': path.resolve('src/models'),
+    'seeders-path': path.resolve('src/seeders'),
+    'migrations-path': path.resolve('src/migrations')
 }
